--- a/src/modules/App/styles.scss
+++ b/src/modules/App/styles.scss
@@ -3,7 +3,7 @@ body {
   line-height: 1;
   min-height: 100vh;
   width: 100%;
-  overflow-y: hidden;
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
