--- a/src/modules/App/styles.scss
+++ b/src/modules/App/styles.scss
@@ -1,15 +1,30 @@
+html,
 body {
-  position: relative;
-  line-height: 1;
-  min-height: 100vh;
-  width: 100%;
+  height: 100%;
+}
+
+body {
+  // min-height: 100vh;
+  width: 100vw;
   overflow-x: hidden;
+  line-height: 1;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+// #root {
+//   position: fixed;
+//   left: 0;
+//   right: 0;
+//   top: 0;
+//   bottom: 0;
+//   overflow-y: auto;
+// }
+#root {
+  height: 100%;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
