--- a/src/modules/App/styles.scss
+++ b/src/modules/App/styles.scss
@@ -4,7 +4,6 @@ body {
 }
 
 body {
-  // min-height: 100vh;
   width: 100vw;
   overflow-x: hidden;
   line-height: 1;
@@ -14,17 +13,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-// #root {
-//   position: fixed;
-//   left: 0;
-//   right: 0;
-//   top: 0;
-//   bottom: 0;
-//   overflow-y: auto;
-// }
 #root {
-  height: 100%;
+  min-height: 100vh;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
